@@ -1,4 +1,5 @@
 0.6.0
+Added variables colour to themes.
 Added java lang plug.
 Code clean in lang plugs.
 Added PHP language plugin.
